force-app/main/default/objects/Imovel__c/Imovel__c.object-meta.xml
<CustomObject>
    <description>Objeto que possui as informações dos imóveis.</description>
    <label>Imóvel</label>
    <nameField>
        <displayFormat>IMV-{00000}</displayFormat>
        <label>Imóvel</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imóveis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>