force-app/main/default/objects/Imovel__c/fields/Bloco__c.field-meta.xml
<CustomField>
    <fullName>Bloco__c</fullName>
    <label>Bloco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>