force-app/main/default/objects/Imovel__c/fields/Metragem__c.field-meta.xml
<CustomField>
    <fullName>Metragem__c</fullName>
    <inlineHelpText>Metragem do empreendimento em m2</inlineHelpText>
    <label>Metragem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>