force-app/main/default/objects/Imovel__c/fields/NomeEmpreendimento__c.field-meta.xml
<CustomField>
    <fullName>NomeEmpreendimento__c</fullName>
    <label>Nome do empreendimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>