force-app/main/default/objects/Imovel__c/fields/Possui_quintal__c.field-meta.xml
<CustomField>
    <fullName>Possui_quintal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Seu imóvel possui quintal?</inlineHelpText>
    <label>Possui quintal?</label>
    <type>Checkbox</type>
</CustomField>