force-app/main/default/objects/Imovel__c/fields/PossuiSacada__c.field-meta.xml
<CustomField>
    <fullName>PossuiSacada__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Seu imóvel possui Sacada?</inlineHelpText>
    <label>Possui sacada?</label>
    <type>Checkbox</type>
</CustomField>