force-app/main/default/objects/Imovel__c/fields/QuantidadeVagas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeVagas__c</fullName>
    <inlineHelpText>Quantidade de vagas para estacionamento.</inlineHelpText>
    <label>Quantidade de vagas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>