force-app/main/default/objects/Imovel__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponível</fullName>
                <default>true</default>
                <label>Disponível</label>
            </value>
            <value>
                <fullName>Vendido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>