force-app/main/default/objects/Imovel__c/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <label>Unidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>