force-app/main/default/objects/Imovel__c/fields/ValorBase__c.field-meta.xml
<CustomField>
    <fullName>ValorBase__c</fullName>
    <label>Valor base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>