force-app/main/default/objects/Imovel__c/recordTypes/Casa.recordType-meta.xml
<RecordType>
    <fullName>Casa</fullName>
    <active>true</active>
    <label>Casa</label>
</RecordType>